--- a/servoo_finance/views/account_bank_statement_view.xml
+++ b/servoo_finance/views/account_bank_statement_view.xml
@@ -23,6 +23,7 @@
                 </button>
                 <field name="amount" position="before">
                     <field name="beneficiary" optional="hidden"/>
+                    <field name="receiver" optional="hidden"/>
                 </field>
             </field>
         </record>
