--- a/servoo_stevedoring/views/stevedoring_file_view.xml
+++ b/servoo_stevedoring/views/stevedoring_file_view.xml
@@ -378,7 +378,7 @@
             <field name="res_model">servoo.stevedoring.file</field>
             <field name="view_mode">tree,form</field>
             <field name="context">{}</field>
-            <field name="domain">[('state', '=', 'open'), ('invoice_count','&lt;=',1)]</field>
+            <field name="domain">[('state', 'in', ('open','done')), ('invoice_count','&lt;=',1)]</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
                     There is no stevedoring file to invoice!
