--- a/servoo_shipping/views/shipping_file_view.xml
+++ b/servoo_shipping/views/shipping_file_view.xml
@@ -8,6 +8,7 @@
                 <tree string="Shipping Files">
                     <field name="name" />
                     <field name="file_type_id" />
+                    <field name="good_type_id" />
                     <field name="operation_type" />
                     <field name="partner_id" />
                     <field name="vessel" />
@@ -65,6 +66,7 @@
                                        options='{"always_reload": True}'/>
 
                                 <field name="file_type_id" required="1"/>
+                                <field name="good_type_id" required="1"/>
                             </group>
                                 <group col="4" string="Vessel">
                                     <field name="vessel" required="1"/>
@@ -316,7 +318,7 @@
             <field name="res_model">servoo.shipping.file</field>
             <field name="view_mode">tree,form</field>
             <field name="context">{}</field>
-            <field name="domain">[('state', '=', 'open'), ('invoice_count','&lt;=',1)]</field>
+            <field name="domain">[('state', 'in', ('open','done')), ('invoice_count','&lt;=',1)]</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
                     There is no shipping file to invoice!
@@ -378,7 +380,33 @@
             </field>
         </record>
 
+        <record model="ir.ui.view" id="view_shipping_file_good_type_tree">
+            <field name="name">view.shipping.file.good.type.tree</field>
+            <field name="model">servoo.shipping.file.good.type</field>
+            <field name="arch" type="xml">
+                <tree string="Good Type" editable="top">
+                    <field name="name" />
+                    <field name="sequence_code" />
+                </tree>
+            </field>
+        </record>
+
+        <record model="ir.actions.act_window" id="action_shipping_file_good_type">
+            <field name="name">Good Type</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">servoo.shipping.file.good.type</field>
+            <field name="view_mode">tree</field>
+            <field name="context">{}</field>
+            <field name="domain">[]</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    Create a new good type!
+                </p>
+            </field>
+        </record>
+
         <menuitem id="shipping_file_type_menu" parent="servoo_shipping.menu_shipping_config" action="action_shipping_file_type" />
+        <menuitem id="shipping_file_good_type_menu" parent="servoo_shipping.menu_shipping_config" action="action_shipping_file_good_type" />
 
     </data>
 </odoo>
