Ajout des pièces jointes sur la demande de paiement Ajout du partenaire sur la demande de paiement création du paiement fournisseur au moment de la validation de la demande de paiement par les finances creation des entree dans le journal de caisse/banque lors de l'enregistrement d'un paiement Ajout d'un etat de paiement des devis permettre le paiement d'un devis

--- a/servoo_finance/report/report_payment_request.xml
+++ b/servoo_finance/report/report_payment_request.xml
@@ -72,7 +72,7 @@
                     </div>
                     <br>
                         À L'ORDRE DE:
-                        <b><span t-field="doc.employee_id.name"/></b>
+                        <b><span t-field="doc.partner_id"/></b>
                     </br>
                     <br>
                         MOTIF:
