--- a/servoo_finance/views/payment_request_view.xml
+++ b/servoo_finance/views/payment_request_view.xml
@@ -8,6 +8,7 @@
                 <tree string="Payment Request">
                     <field name="name" />
                     <field name="date" />
+                    <field name="partner_id" />
                     <field name="employee_id" />
                     <field name="department_id" />
                     <field name="file_reference" />
@@ -45,12 +46,15 @@
                         <group col="4">
                             <field name="name" readonly="1" />
                             <field name="date" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+                            <field name="partner_id" required="1"  colspan="4"/>
+<!--                            <field name="partner_id" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}" colspan="4"/>-->
                             <field name="employee_id" readonly="1" required="1"/>
                             <field name="employee_parent_id" readonly="1" />
                             <field name="department_id" readonly="1" required="1" colspan="4"/>
                             <field name="file_reference" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                             <field name="amount_total" />
                             <field name="payment_mode" attrs="{'readonly': [('state', '!=', 'draft')]}" colspan="4"/>
+                            <field name="account_payment_id" groups="servoo_finance.group_finance_user" readonly="1"/>
                             <field name="our_requests" invisible="1" />
                         </group>
                         <group col="4" string="Description">
@@ -64,6 +68,14 @@
                                         <field name="description" />
                                         <field name="file_reference" />
                                         <field name="amount" />
+                                    </tree>
+                                </field>
+                            </page>
+                            <page string="Documents">
+                                <field name="document_ids" widget="one2many" mode="tree" >
+                                    <tree string="Documents" editable="bottom">
+                                        <field name="name" />
+                                        <field name="attachment_ids" widget="many2many_binary" />
                                     </tree>
                                 </field>
                             </page>
