--- a/servoo_finance/wizard/wizard_cashier_piece_view.xml
+++ b/servoo_finance/wizard/wizard_cashier_piece_view.xml
@@ -8,13 +8,16 @@
                <sheet>
                    <group string="Confirmation ?" />
                     <group col="2">
+                        <field name="state" invisible="1" />
                         <field name="date" />
                         <field name="observation" />
                     </group>
                 </sheet>
                 <footer>
                     <button name="action_validate" string="Approve" type="object" class="oe_highlight" data-hotkey="q"/>
-                    <button name="action_reject" string="Reject" type="object" class="btn-danger" data-hotkey="c"/>
+                    <button name="action_reject" string="Reject" type="object" class="btn-danger" data-hotkey="c"
+                    attrs="{'invisible': [('state', 'not in', ('service_approval', 'direction_approval', 'cashier_approval'))]}"
+                    />
                     <button string="Discard" class="btn-secondary" special="cancel" data-hotkey="z"/>
                 </footer>
             </form>
