--- a/servoo_shipping/views/shipping_pda_view.xml
+++ b/servoo_shipping/views/shipping_pda_view.xml
@@ -22,6 +22,7 @@
                     <field name="amount_total" sum="Total Tax Included" widget="monetary" decoration-bf="1" optional="show"/>
                     <field name="currency_id" invisible="1"/>
                     <field name="state" decoration-success="state == 'won'" decoration-info="state == 'draft'" decoration-warning="state == 'lost'" widget="badge" optional="show"/>
+                    <field name="payment_state" decoration-success="payment_state == 'paid'" decoration-info="payment_state == 'partial'" decoration-danger="payment_state == 'not_paid'" widget="badge" optional="show"/>
                     <field name="tag_ids" optional="hide" widget="many2many_tags" options="{'color_field': 'color'}"/>
                     <field name="state" invisible="1"/>
                 </tree>
@@ -68,6 +69,9 @@
                             <field name="invoice_count" widget="statinfo" string="Invoices"/>
                         </button>
                     </div>
+                    <field name="payment_state" invisible="1" />
+                    <widget name="web_ribbon" title="Paid" attrs="{'invisible': [('payment_state', '!=', 'paid')]}"/>
+                    <widget name="web_ribbon" title="Partially Paid" attrs="{'invisible': [('payment_state', '!=', 'partial')]}"/>
                     <div class="oe_title">
                         <h1>
                             <field name="name" readonly="1"/>
