--- a/servoo_transit/views/transit_order_view.xml
+++ b/servoo_transit/views/transit_order_view.xml
@@ -61,7 +61,7 @@
                                 <field name="partner_id" widget="res_partner_many2one" context="{'show_address': 1, 'show_vat': True}" options='{"always_reload": True}' colspan="4"/>
                                 <field name="external_reference" colspan="4" string="Client Reference" />
                                 <field name="operation_type" required="1"/>
-                                <field name="sub_operation_type" options="{'no_create': True}" domain="[('operation_type', '=', operation_type)]" required="1"/>
+                                <field name="sub_operation_type" options="{'no_create': True}" domain="[('operation_type', '=', operation_type)]" required="0"/>
                                 <field name="date_debut" />
                                 <field name="date_end" />
                             </group>
@@ -71,7 +71,7 @@
                                 <field name="bill_of_lading" />
                                  <field name="arrival_date"/>
                                 <field name="transport_mode_id" options="{'no_create': True}" required="1"/>
-                                <field name="transport_means_id" options="{'no_create': True}"/>
+                                <field name="transport_means_id" options="{'no_create': False}"/>
                                 <field name="departure_country_id" options="{'no_create': True}"/>
                                 <field name="loading_place_id"  options="{'no_create': True}" domain="[('country_id', '=', departure_country_id)]"/>
                                 <field name="transit_country_id" options="{'no_create': True}"/>
@@ -196,7 +196,7 @@
             <field name="res_model">servoo.transit.order</field>
             <field name="view_mode">tree,form</field>
             <field name="context">{}</field>
-            <field name="domain">[('state', '=', 'open'), ('invoice_count','&lt;=',1)]</field>
+            <field name="domain">[('state', 'in', ('open','done')), ('invoice_count','&lt;=',1)]</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
                     There is no transit order to invoice!
