--- a/servoo_sales/report/sale_report_templates.xml
+++ b/servoo_sales/report/sale_report_templates.xml
@@ -582,8 +582,7 @@
         <field name="report_type">qweb-pdf</field>
         <field name="report_name">servoo_sales.report_servoo_saleorder</field>
         <field name="report_file">servoo_sales.report_servoo_saleorder</field>
-        <field name="print_report_name">(object.state in ('draft', 'sent') and 'Quotation - %s' % (object.name)) or
-            'Order - %s' % (object.name)
+        <field name="print_report_name">(object.state in ('draft', 'sent') and 'Quotation - %s' % (object.name)) or 'Order - %s' % (object.name)
         </field>
         <field name="binding_model_id" ref="model_sale_order"/>
         <field name="binding_type">report</field>
