--- a/servoo_sales/views/account_move_views.xml
+++ b/servoo_sales/views/account_move_views.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+    <record model="ir.ui.view" id="view_servoo_move_tree">
+        <field name="name">servoo.account.move.tree</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_out_invoice_tree" />
+        <field name="arch" type="xml">
+            <field name="invoice_origin" position="before">
+                <field name="apm_reference"/>
+            </field>
+        </field>
+    </record>
+
         <record model="ir.ui.view" id="view_servoo_move_form">
             <field name="name">servoo.account.move.form</field>
             <field name="model">account.move</field>
             <field name="inherit_id" ref="account.view_move_form" />
             <field name="arch" type="xml">
                 <field name="invoice_origin" position="before">
+                    <field name="apm_reference" readonly="1" />
                     <field name="agency_name" required="1" />
                     <field name="department_id" readonly="1" attrs="{'invisible': [('move_type', '!=', 'in_invoice')]}"  />
 <!--                    <field name="sale_order_template_id" context="{'company_id': company_id}"-->
@@ -48,15 +60,18 @@
                         <field name="object" colspan="4"/>
                     </group>
                 </notebook>
-                <field name="state" position="replace">
-                    <field name="state" widget="statusbar" statusbar_visible="draft,posted" attrs="{'invisible': [('move_type', '!=', 'out_invoice')]}"/>
-                    <field name="state" widget="statusbar" statusbar_visible="draft,direction_routing,department_approval,direction_approval,accounting_approval,management_control_approval,in_payment" attrs="{'invisible': [('move_type', '!=', 'in_invoice')]}"/>
-                </field>
+<!--                <field name="state" position="replace">-->
+<!--                    <field name="state" widget="statusbar" statusbar_visible="draft,posted" attrs="{'invisible': [('move_type', '=', 'in_invoice')]}"/>-->
+<!--                    <field name="state" widget="statusbar" statusbar_visible="draft,direction_routing,department_approval,direction_approval,accounting_approval,management_control_approval,posted" attrs="{'invisible': [('move_type', '!=', 'in_invoice')]}"/>-->
+<!--                </field>-->
                 <button name="action_post" position="after">
                     <button name="action_submit" class="oe_highlight" string="Send to Direction" type="object"
                             groups="servoo_sales.group_supplier_invoice_admissibility"
                             states="draft" attrs="{'invisible': ['|',('move_type', '!=', 'in_invoice'), ('state', '!=', 'draft')]}" />
                     <button name="%(action_wizard_supplier_invoice)d" string="Send to Department" class="oe_highlight" type="action"
+                            groups="servoo_sales.group_supplier_invoice_general_direction"
+                            attrs="{'invisible': ['|',('move_type', '!=', 'in_invoice'), ('state', '!=', 'direction_routing')]}" />
+                    <button name="%(action_wizard_supplier_validation_invoice)d" string="Send to Accounting" class="oe_highlight" type="action"
                             groups="servoo_sales.group_supplier_invoice_general_direction"
                             attrs="{'invisible': ['|',('move_type', '!=', 'in_invoice'), ('state', '!=', 'direction_routing')]}" />
                     <button name="%(action_wizard_supplier_invoice)d" string="Approve" class="oe_highlight" type="action"
