Modification du type de donnée pour le chanp quantity_python_compute Ajout d'une nouvelle variable QUANTITY pour le modèle de devis Prise en compte de la taxe sur la redevance marchandise Modification du libelle tarif manutention en tarif redevance marchandise Correction du problème de génération de la facture depuis le devis

--- a/servoo_sales/views/sale_views.xml
+++ b/servoo_sales/views/sale_views.xml
@@ -40,7 +40,10 @@
                         <field name="number_of_packages" />
                         <field name="object" colspan="4"/>
                         <field name="handling_rate_id" />
+                        <field name="include_tax_for_handling" />
                         <field name="handling" />
+                        <field name="quantity" />
+
                     </group>
                 </notebook>
             </field>
