--- a/servoo_sales/views/sale_order_template_views.xml
+++ b/servoo_sales/views/sale_order_template_views.xml
@@ -16,6 +16,8 @@
                                 <span colspan="2">Available variables:</span>
                                 <span colspan="2">VOLUME: the volume</span>
                                 <span colspan="2">TONNAGE: the weight</span>
+                                <span colspan="2">QUANTITY: the quantity</span>
+                                <span colspan="2">ROYALTY: the royalty rate</span>
                                 <span colspan="2">HANDLING: the handling rate per tonne</span>
                                 <span colspan="2">rules: object containing the rules code (previously computed)</span>
                             </group>
