--- a/servoo_shipping/views/shipping_file_view.xml
+++ b/servoo_shipping/views/shipping_file_view.xml
@@ -32,11 +32,11 @@
                         <button name="action_done" states="open" type="object" string="Done" groups="servoo_shipping.shipping_group_user"/>
                         <button name="create_invoices" string="Create Invoice"
                                 type="object" class="btn-primary" data-hotkey="q" groups="account.group_account_invoice"
-                                attrs="{'invisible': ['|',('state', '!=', 'open'), ('invoice_count','&gt;=',1)]}"/>
+                                attrs="{'invisible': ['|',('state', 'not in', ('open', 'done')), ('invoice_count','&gt;=',1)]}"/>
 
                         <button name="create_invoices" string="Create Invoice"
                                 type="object" data-hotkey="q" groups="account.group_account_invoice"
-                                attrs="{'invisible': ['|',('state', '!=', 'open'), ('invoice_count','=',0)]}"/>
+                                attrs="{'invisible': ['|',('state', 'not in', ('open', 'done')), ('invoice_count','=',0)]}"/>
 
                         <button name="action_draft" states="cancel" type="object" string="Open"
                                 groups="servoo_shipping.shipping_group_manager"/>
